# RStanBook-Python

./: README.md  pyproject.toml
src/python_bayes/: __init__.py  chap04.ipynb  chap05.ipynb  chap06.ipynb  chap07.ipynb  chap10.ipynb  chap11.ipynb  chap12.ipynb
src/python_bayes/chap04/exercise/: ex3  ex3.hpp  ex5  ex5.hpp
src/python_bayes/chap04/model/: model4-4  model4-4.hpp  model4-5  model4-5.hpp
src/python_bayes/chap05/exercise/: ex4  ex4.hpp  ex4.stan  ex6  ex6.hpp  ex6.stan  ex7  ex7.hpp  ex7.stan
src/python_bayes/chap05/model/: model5-3  model5-3.hpp  model5-4  model5-4.hpp  model5-5  model5-5.hpp  model5-6b  model5-6b.hpp  model5-6b.stan
src/python_bayes/chap07/model/: model7-1  model7-1.hpp  model7-2  model7-2.hpp  model7-3  model7-3.hpp  model7-4  model7-4.hpp  model7-5  model7-5.hpp  model7-6  model7-6.hpp  model7-6.stan  model7-7  model7-7.hpp  model7-8  model7-8.hpp  model7-9  model7-9.hpp  model7-9.stan
src/python_bayes/chap08/exercise/: ex5  ex5.hpp  ex5.stan  ex6  ex6.hpp  ex6.stan  ex7  ex7.hpp  ex7.stan
src/python_bayes/chap08/model/: model8-1  model8-1.hpp  model8-1.stan  model8-2  model8-2.hpp  model8-2.stan  model8-3  model8-3.hpp  model8-3.stan  model8-4  model8-4.hpp  model8-4.stan  model8-5  model8-5.hpp  model8-5.stan  model8-6  model8-6.hpp  model8-6.stan  model8-7  model8-7.hpp  model8-7.stan  model8-8  model8-8.hpp  model8-8.stan
src/python_bayes/chap09/model/: model8-4b  model8-4b.hpp  model8-4b.stan
src/python_bayes/chap10/input/: data-shogi-player-name.txt
src/python_bayes/chap10/model/: model10-2  model10-2.hpp  model10-3  model10-3.hpp  model10-4  model10-4.hpp  model10-4.stan  model10-5  model10-5.hpp  model10-5.stan  model10-6  model10-6.hpp  model10-6.stan  model10-7  model10-7.hpp  model10-7.stan  model10-8a  model10-8a.hpp  model10-8b  model10-8b.hpp  model8-4c.stan  model8-4d  model8-4d.hpp  model8-4d.stan
src/python_bayes/chap11/exercise/: ex1  ex1.hpp  ex1.stan  ex2  ex2.hpp  ex2.stan  ex3_A  ex3_A.hpp  ex3_A.stan  ex3_B  ex3_B.hpp  ex3_B.stan  ex5  ex5.hpp  ex5.stan  ex6  ex6.hpp  ex6.stan
src/python_bayes/chap11/model/: model11-1  model11-1.hpp  model11-1.stan  model11-2  model11-2.hpp  model11-2.stan  model11-2b  model11-2b.hpp  model11-2b.stan  model11-5  model11-5.hpp  model11-6  model11-6.hpp  model11-6b  model11-6b.hpp  model11-7  model11-7.hpp  model11-7.stan  model11-8  model11-8.hpp  model11-8.stan
src/python_bayes/chap12/exercise/: ex2  ex2.hpp  ex4  ex4.hpp
src/python_bayes/chap12/model/: model12-11  model12-11.hpp  model12-11.stan  model12-12  model12-12.hpp  model12-12.stan  model12-13  model12-13.hpp  model12-13.stan  model12-13b  model12-13b.hpp  model12-13b.stan  model12-14  model12-14.hpp  model12-14.stan  model12-2  model12-2.hpp  model12-4  model12-4.hpp  model12-6  model12-6.hpp  model12-6b  model12-6b.hpp  model12-7  model12-7.hpp
src/python_bayes/model/: model4-5.pkl
