[project]
name = "python-bayes"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sato1214syun", email = "sato1214syun@gmail.com" }
]
dependencies = [
    "polars>=0.18.12",
    "seaborn>=0.12.2",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.2",
    "pyarrow>=12.0.1",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "cmdstanpy>=1.1.0",
    "arviz>=0.15.1",
    "seaborn-analyzer>=0.3.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.0.287",
    "notebook>=7.0.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
select = ["ALL"]
ignore = []
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
per-file-ignores = {}
line-length = 88
target-version = "py311"
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]

[tool.ruff.pydocstyle]
convention = "google"
