[project]
name = "python-bayes"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sato1214syun", email = "sato1214syun@gmail.com" }
]
dependencies = [
    "polars>=0.19.17",
    "seaborn>=0.13.1",
    "scikit-learn>=1.3.2",
    "matplotlib>=3.8.0",
    "pyarrow>=14.0.1",
    "numpy>=1.26.1",
    "pandas>=2.1.2",
    "cmdstanpy>=1.2.0",
    "arviz>=0.17.0",
    "seaborn-analyzer>=0.3.5",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.11",
    "jupyter>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
select = ["ALL"]
ignore = ["E402"]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
per-file-ignores = {}
target-version = "py312"
include = ["*.py", "*.pyi", "**/pyproject.toml", "*.ipynb"]

[tool.ruff.pydocstyle]
convention = "google"
